Fix Bug 436375 - "Editing as new" selects the wrong transport

BUG: 436375
FIXED-IN: 5.17.1